# GrowtopiaClient

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp
src/Client/: Client.cpp  Client.h  ENetClient.cpp  ENetClient.h  Peer.cpp  Peer.h
src/Include/: randutils.hpp
src/Packet/: PacketCommon.h  PacketDecoder.h  PacketTextParse.cpp  PacketTextParse.h
src/Utilities/: Random.h  Utils.cpp  Utils.h  Variant.cpp  Variant.h
